# wasm-tools-compose-resources-bug-report

./: .gitignore  Cargo.toml  config.yml  runner.bat  service.wit
aimpl/: Cargo.toml
aimpl/src/: bindings.rs  lib.rs
bimpl/: Cargo.toml
bimpl/src/: bindings.rs  lib.rs
main/: Cargo.toml
main/src/: bindings.rs  lib.rs
src/: bindings.rs
