[package]
name = "bimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.22.0"

[package.metadata.component]
target = { path = "../service.wit",  world = "b" }
